--- a/Unnatii/pom.xml
+++ b/Unnatii/pom.xml
@@ -49,6 +49,11 @@
 				<version>3.6.10.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
+		</dependency>
+		<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
 				<version>20030825.184428</version>
@@ -114,7 +119,12 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-		
+		<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.7</version>
+		</dependency>
+            
 		<!-- @mysql -->
 		<dependency>
 				<groupId>mysql</groupId>
