--- a/Unnatii/pom.xml
+++ b/Unnatii/pom.xml
@@ -42,6 +42,23 @@
 					<artifactId>spring-orm</artifactId>
 					<version>${org.springframework-version}</version>
 		</dependency>
+		<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${org.springframework-version}</version>
+		</dependency>
+        <dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${org.springframework-version}</version>
+		</dependency>
+            
+                
 		<!-- Hibernate -->
 		<dependency>
 				<groupId>org.hibernate</groupId>
