--- a/Unnatii/pom.xml
+++ b/Unnatii/pom.xml
@@ -58,7 +58,16 @@
 				<version>${org.springframework-version}</version>
 		</dependency>
             
-                
+       <dependency>
+			    <groupId>org.springframework.social</groupId>
+			    <artifactId>spring-social-core</artifactId>
+			    <version>1.0.2.RELEASE</version>
+	  </dependency> 
+	  <dependency>
+			    <groupId>org.springframework.social</groupId>
+			    <artifactId>spring-social-facebook</artifactId>
+			    <version>1.0.2.RELEASE</version>
+	 </dependency>         
 		<!-- Hibernate -->
 		<dependency>
 				<groupId>org.hibernate</groupId>
